--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 						</nav>
 					</header>
 
-				<!-- Footer -->
+				<!-- Footer 
 					<footer id="footer">
 						<span class="copyright">&copy; 2018  <a href="http://gdgelalto.otg">GDG El Alto</a>.</span>
-					</footer>
+					</footer>-->
 
 			</div>
 		</div>
